# jarvis_assistant

./: .gitignore  CHANGELOG.md  README.md  agent_tools.py  audio_capture.py  config.json  download_voices.py  generate_sound.py  get_speakers.py  gui.py  main.py  pyproject.toml  requirements.txt  test_qwen.py  tts_engine.py
